# strip-ths

./: README.md  stack.yaml  strip-ths.cabal
app/: Main.hs
