name:                strip-ths
version:             0.1.0.0
synopsis:            An extremely simple Template Haskell stripper
description:         Please see README.md
homepage:            http://github.com/lukexi/strip-ths#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable strip-ths
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, split, text, directory, filepath, process
  default-language:    Haskell2010

test-suite strip-ths-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/strip-ths
